add features in tg miniapp
